--- a/style.css
+++ b/style.css
@@ -168,7 +168,9 @@ section {
   gap: 5rem;
   height: 80vh;
 }
-
+/* img{
+  border-radius: 200px;
+} */
 .section__pic-container {
   display: flex;
   height: 400px;
@@ -186,18 +188,22 @@ section {
 }
 
 .section__text__p1 {
+  font-size: 50px;
+  font-weight:500 ;
   text-align: center;
 }
 
 .section__text__p2 {
-  font-size: 1.75rem;
+  font-size: 2rem;
   margin-bottom: 1rem;
 }
 
 .title {
-  font-size: 3rem;
+  font-size: 6rem;
   text-align: center;
+  
 }
+
 
 #socials-container {
   display: flex;
@@ -367,7 +373,7 @@ article .icon {
 .project-img {
   border-radius: 2rem;
   width: 90%;
-  height: 90%;
+  height: 250px;
 }
 
 .project-title {
